# tauri-plugin-windows-version

./: .release-it.ts  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_windows_version.toml  is_windows_10.toml  is_windows_11.toml  is_windows_7.toml  is_windows_8.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
