[package]
name = "tauri-plugin-windows-version"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-windows-version"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-version = "0.1"
