[package]
name = "tauri-plugin-windows-version"
version = "1.0.0"
authors = [ "ayangweb" ]
description = "Get the version number of the current Windows OS."
repository = "https://github.com/ayangweb/tauri-plugin-windows-version"
keywords = ["tauri", "tauri-plugin", "windows-version"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-windows-version"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-version = "0.1"
